fix: hud nav always behind pause menu

--- a/src/components/hud/hud.css
+++ b/src/components/hud/hud.css
@@ -30,7 +30,6 @@
     display: flex;
     justify-content: center;
     gap: 5px;
-    z-index: 2;
 }
 
 /* light shake */
@@ -91,7 +90,6 @@
     width: fit-content;
     justify-content: flex-start;
     gap:0;
-    z-index: 0;
   }
 
 }
